Delete AI slop