@@ -25,22 +25,11 @@ class BinOpParser<T extends Concrete.SourceNode> {
   private final ErrorReporter myErrorReporter;
   private final List<StackElem<T>> myStack;
   private final BinOpEngine<T> myEngine;
-  // Data of the whole sequence being parsed, or null when the caller does not supply it (pattern
-  // parsing). Used by wrapperData as the `data` of a synthetic application wrapper around a
-  // complete-value operand (e.g. a section lambda) so the wrapper does not reuse (and thus collide
-  // with) that operand's data. See ArendBinOpUtils.exprToConcrete1, which relies on `data`
-  // identifying a unique PSI node.
-  private final Object mySequenceData;
 
   BinOpParser(TypingInfo typingInfo, ErrorReporter errorReporter, BinOpEngine<T> engine) {
-    this(typingInfo, errorReporter, engine, null);
-  }
-
-  BinOpParser(TypingInfo typingInfo, ErrorReporter errorReporter, BinOpEngine<T> engine, Object sequenceData) {
     myTypingInfo = typingInfo;
     myErrorReporter = errorReporter;
     myEngine = engine;
-    mySequenceData = sequenceData;
     myStack = new ArrayList<>();
   }
 
@@ -82,23 +71,12 @@ class BinOpParser<T extends Concrete.SourceNode> {
       return;
     }
 
-    StackElem<T> topElem = myStack.get(myStack.size() - 1);
+    StackElem<T> topElem = myStack.getLast();
     if (topElem.precedence == null || !isExplicit) {
-      topElem.component = myEngine.wrapSequence(wrapperData(topElem.component), topElem.component, List.of(Pair.create(component, isExplicit)));
+      topElem.component = myEngine.wrapSequence(topElem.component.getData(), topElem.component, List.of(Pair.create(component, isExplicit)));
     } else {
       myStack.add(new StackElem<>(component, null));
     }
-  }
-
-  // Data for a synthetic application wrapper built around `operand`. Normally the operand's own data
-  // (the operand is the application head, whose data is the natural source anchor that consumers such
-  // as ArendSubExprUtils.rangeOfConcrete rely on). But a complete-value expression operand -- e.g. the
-  // lambda produced for a `` `op `` section -- has its own PSI, so reusing its data would make the
-  // wrapper collide with it in ArendBinOpUtils.exprToConcrete1; such wrappers get the sequence data.
-  private Object wrapperData(T operand) {
-    return operand instanceof Concrete.Expression expr && !(expr instanceof Concrete.ReferenceExpression || expr instanceof Concrete.FieldCallExpression)
-      ? mySequenceData
-      : operand.getData();
   }
 
   public void push(T component, @NotNull Precedence precedence, boolean isPostfix) {
@@ -108,7 +86,7 @@ class BinOpParser<T extends Concrete.SourceNode> {
     }
 
     while (true) {
-      StackElem<T> topElem = myStack.get(myStack.size() - 1);
+      StackElem<T> topElem = myStack.getLast();
       if (topElem.precedence != null) {
         myErrorReporter.report(new NameResolverError("Expected " + myEngine.getPresentableComponentName() + " after an infix operator", topElem.component));
         return;
@@ -133,14 +111,14 @@ class BinOpParser<T extends Concrete.SourceNode> {
   }
 
   private void foldTop() {
-    StackElem<T> topElem = myStack.remove(myStack.size() - 1);
+    StackElem<T> topElem = myStack.removeLast();
     if (topElem.precedence != null && myStack.size() > 1) {
       StackElem<T> nextElem = myStack.get(myStack.size() - 2);
       myErrorReporter.report(new NameResolverError("The operator " + myEngine.getReferable(topElem.component) + " [" + topElem.precedence + "] of a section must have lower precedence than that of the operand, namely " + myEngine.getReferable(nextElem.component) + " [" + nextElem.precedence + "]", topElem.component));
-      topElem = myStack.remove(myStack.size() - 1);
+      topElem = myStack.removeLast();
     }
-    StackElem<T> midElem = myStack.remove(myStack.size() - 1);
-    StackElem<T> botElem = myStack.isEmpty() ? null : myStack.remove(myStack.size() - 1);
+    StackElem<T> midElem = myStack.removeLast();
+    StackElem<T> botElem = myStack.isEmpty() ? null : myStack.removeLast();
 
     if (botElem == null) {
       if (topElem.precedence != null) {
@@ -164,7 +142,7 @@ class BinOpParser<T extends Concrete.SourceNode> {
       foldTop();
     }
 
-    T result = myStack.get(0).component;
+    T result = myStack.getFirst().component;
     myStack.clear();
     return result;
   }
