@@ -47,7 +47,7 @@ public class ExpressionBinOpEngine implements BinOpEngine<Concrete.Expression> {
   }
 
   public static @NotNull Concrete.Expression parse(@NotNull Concrete.BinOpSequenceExpression expression, @NotNull ErrorReporter reporter, @NotNull TypingInfo typingInfo) {
-    Concrete.BinOpSequenceElem<Concrete.Expression> first = expression.getSequence().get(0);
+    Concrete.BinOpSequenceElem<Concrete.Expression> first = expression.getSequence().getFirst();
     if (first.fixity == Fixity.INFIX || first.fixity == Fixity.POSTFIX) {
       LocalReferable firstArg = new LocalReferable(Renamer.UNNAMED);
       List<Concrete.BinOpSequenceElem<Concrete.Expression>> newSequence = new ArrayList<>(expression.getSequence().size() + 1);
@@ -56,7 +56,7 @@ public class ExpressionBinOpEngine implements BinOpEngine<Concrete.Expression> {
       return new Concrete.LamExpression(expression.getData(), Collections.singletonList(new Concrete.NameParameter(expression.getData(), true, firstArg)), parse(new Concrete.BinOpSequenceExpression(expression.getData(), newSequence, expression.getClauses()), reporter, typingInfo));
     }
 
-    Concrete.Expression parsed = new BinOpParser<>(typingInfo, reporter, engine, expression.getData()).parse(expression.getSequence());
+    Concrete.Expression parsed = new BinOpParser<>(typingInfo, reporter, engine).parse(expression.getSequence());
     return parsed instanceof Concrete.AppExpression && parsed.getData() != expression.getData()
         ? Concrete.AppExpression.make(expression.getData(), ((Concrete.AppExpression) parsed).getFunction(), ((Concrete.AppExpression) parsed).getArguments())
         : parsed;
